== LATEST

 * Use an ENV_syphon database configuration in database.yml before falling back
   to the standard one with Rails.

== 0.0.2 2013-12-12

 * Add index_settings attribute to control sharding, replication, etc.
 * Allow dynamic SQL (blocks) for attributes.
 * Make index_base_name overridable instead of index_name. The former is
   prefixed with the configured index_namespace.
 * Restructure configuration under Rails. Single file (syphon.yml) with log
   settings at top-level, and database and elasticsearch settings under their
   respective keys. Log file may now be relative to rails root.

== 0.0.1 2013-11-18

 * Hi.